Що змінилося BookQueryBuilder перепроєктовано – тепер це безстатевий адаптер, який приймає BookQuery і повертає SqlQuery. Fluent API видалено.
Підтримка OR умов – текстовий пошук тепер шукає одночасно в title, keywords, annotation.

Виправлено N+1 – автори та жанри завантажуються одним запитом для списку книг.

Спрощено BookQueryRepository – залишилися тільки базові методи.

Видалено всі застарі методи – findAll, findByAuthorId, findByGenre, findBySeries, search, searchByAuthor, getTotalCount.

Оновлено всі Use Cases та UI-сервіси – вони використовують новий інтерфейс.
завантаження книг тепер викликають executeLoad(BookFilter).

Підготовка до подальших фільтрів – легко додавати нові критерії (рік, мова, рейтинг тощо).